fixed search directive using wrong data model attributes

--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -13,7 +13,7 @@
     </ui-gmap-google-map>
 </div>
 
-<div ng-if="serverError">
+<div ng-if="!serverError">
     <h3>--- Stats:</h3>
     <statistics data="properties"></statistics>
 </div>
