--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -5,14 +5,16 @@
     </div>
 </div>
 
-<search data="properties"></search>
+<search data="properties" marker="marker"></search>
 
 <div class="map">
     <ui-gmap-google-map center='map.center' zoom='map.zoom'>
+        <ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id"></ui-gmap-marker>
         <ui-gmap-markers models='markers' coords='"coords"'></ui-gmap-markers>
     </ui-gmap-google-map>
 </div>
 
+<!--TODO: move to nav bar-->
 <div ng-if="!serverError && properties !== undefined">
     <h3>--- Stats:</h3>
     <statistics data="properties"></statistics>
