--- a/frontend/app/views/stats.html
+++ b/frontend/app/views/stats.html
@@ -5,12 +5,7 @@
     </div>
 </div>
 
-<search data="properties"></search>
-
-<div class="map">
-    <ui-gmap-google-map center='map.center' zoom='map.zoom'>
-        <ui-gmap-markers models='markers' coords='"coords"'></ui-gmap-markers>
-    </ui-gmap-google-map>
+<div ng-if="!serverError && properties !== undefined">
+    <h3>--- Stats:</h3>
+    <statistics data="properties"></statistics>
 </div>
-
-
