--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -15,6 +15,15 @@ footer {
     text-align: center;
 }
 
+.angular-google-map-container {
+    height: 450px;
+}
+
+.properties {
+    width: 100%;
+    height: 250px;
+}
+
 .dropdown-menu {
     max-height: 150px;
     overflow-y: auto;
@@ -24,37 +33,7 @@ footer {
     margin-bottom: 15px;
 }
 
-.search-directive input {
-    min-width: 400px;
+.active {
+    color: red !important;
 }
-
-.wrap {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.angular-google-map-container {
-    height: 600px;
-    width: 80%;
-    float: left;
-}
-
-.properties-sidebar {
-    width: 20%;
-    height: 600px;
-    float: right;
-    overflow: auto;
-}
-
-.property {
-    background: #f8f8f8;
-    margin-top: 5px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    border-radius: 23px;
-    border: 1px solid #040000;
-
-}
-
 
