--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -15,19 +15,17 @@ footer {
     text-align: center;
 }
 
+.map {
+    padding-top: 60px;
+}
+
 .angular-google-map-container {
     height: 450px;
-    float: left;
 }
 
 .properties {
-    width: 100%;
-    height: 250px;
-}
-
-.dropdown-menu {
-    max-height: 150px;
-    overflow-y: auto;
+    width: 40%;
+    margin-right: 15px;
 }
 
 .search-directive {
