small tweaks to design and functionality

--- a/frontend/app/views/stats.html
+++ b/frontend/app/views/stats.html
@@ -1,3 +1,3 @@
 <div ng-if="properties !== undefined" ng-cloak>
-    <statistics data="properties"></statistics>
+    <statistics data="districtsStats"></statistics>
 </div>
