small tweaks with cursor type, when over table

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -36,6 +36,14 @@ footer {
     color: red !important;
 }
 
+.table tr {
+    cursor: pointer
+}
+
+.table table tr {
+    cursor: default;
+}
+
 .sub-table {
     font-size: small;
     background: #FCF8E3;
