--- a/frontend/app/views/stats.html
+++ b/frontend/app/views/stats.html
@@ -1,3 +1,3 @@
-<div ng-if="properties !== undefined" ng-cloak>
+<div ng-if="properties && properties.length !== undefined" ng-cloak>
     <statistics data="districtsStats"></statistics>
 </div>
